Get,full config.
